psp-migration/restrict-runtimeClassName/.chainsaw-test/policy-ready.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: restrict-runtimeclass
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
