psp-migration/restrict-runtimeClassName/.chainsaw-test/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  creationTimestamp: null
  name: restrict-runtimeclassname
spec:
  steps:
  - name: step-00
    try:
    - script:
        content: |
          sed 's/validationFailureAction: audit/validationFailureAction: Enforce/' ../restrict-runtimeClassName.yaml | kubectl create -f -
  - name: step-01
    try:
    - assert:
        file: policy-ready.yaml
  - name: step-02
    try:
    - apply:
        file: chainsaw-step-02-apply-1.yaml
    - apply:
        file: chainsaw-step-02-apply-2.yaml
    - apply:
        file: chainsaw-step-02-apply-3.yaml
    - apply:
        file: chainsaw-step-02-apply-4.yaml
  - name: step-03
    try:
    - apply:
        file: good.yaml
    - apply:
        expect:
        - check:
            ($error != null): true
        file: bad.yaml
  - name: step-99
    try:
    - delete:
        ref:
          apiVersion: kyverno.io/v1
          kind: ClusterPolicy
          name: restrict-runtimeclass
